--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -2,11 +2,11 @@ SRC = $(wildcard *.cpp)
 
 OBJ = $(SRC:.cpp=.o)
 
-NAME = bureaucrat
+NAME = scalar_converter
 
 CC = c++
 
-FLAGS = -Wall -Werror -Wextra -std=c++98
+FLAGS = -Wall -Werror -Wextra -std=c++98 -g3
 
 %.o: %.cpp
 	@$(CC) $(FLAGS) -c $< -o $@
